--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.7",
     "@radix-ui/react-toast": "^1.2.1",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
